fix: hidden content overflow height movie modal

--- a/src/components/molecules/ModalMovie/ModalMovie.scss
+++ b/src/components/molecules/ModalMovie/ModalMovie.scss
@@ -59,7 +59,6 @@
     }
     
     &_content {
-      height: 200px;
       margin-top: auto;
       padding: 0 20px;
       z-index: 10;
